# student-dashboard

./: .env.development  .gitignore  CONFIG.md  README.md  cookie.txt  env.development:Zone.Identifier  env.production:Zone.Identifier  env:Zone.Identifier  githubAutomation.sh  qbittorrentcookie.txt  readme.md  testing.ipynb  vetur.config.js
backend/: .env_docker  Dockerfile  Pipfile  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  start-server.sh  technologies  testing.ipynb
backend/api-server/: globals.py  testing.ipynb
backend/api-server/models/: repo.py
backend/backend/: configuration.py  db.py  dependencies.py  globals.py  main.py  models.py
backend/backend/actions/: actions.py  buildReports.py
backend/backend/database/: __init__.py  agile.py  agileOrm.py  config.py  db.py  last.py  models.py  repo.py  repoOrm.py  users.py  usersOrm.py  util.py
backend/backend/html/: asset-manifest.json  index.html
backend/backend/models/: __init__.py  agile.py  repo.py  users.py
backend/backend/processing/: authentication.py  automation.py  config.py  getRepos.py  gitconnection.py  metrics.py  reports.py  setup.py
backend/backend/routes/: __init__.py  authentication.py  automation.py  config.py  reports.py  setup.py
backend/backend/schemas/: __init__.py  db_schemas.py  reports.py  requests.py  responses.py  schemas.py
backend/database/: sqlalchemyConnect.py
backend/database/tables/: agileOrm.py  usersOrm.py
backend/deploy-tools/: docker-compose.yml
backend/models/: agile.py  repo.py  users.py
backend/tests/: test_data.json
(+81 files in other folders)
